# my_sk_crew

./: README.md  pyproject.toml  report.md
src/my_sk_crew/: crew.py  main.py
src/my_sk_crew/config/: agents.yaml
