[project]
name = "my_sk_crew"
version = "0.1.0"
description = "my_sk_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1",
    "litellm>=1.79.0",
]

[project.scripts]
my_sk_crew = "my_sk_crew.main:run"
run_crew = "my_sk_crew.main:run"
train = "my_sk_crew.main:train"
replay = "my_sk_crew.main:replay"
test = "my_sk_crew.main:test"
run_with_trigger = "my_sk_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
